Fixed reset button going out of screen

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
   height: 3rem;
   width: 6rem;
   position: absolute;
-  top: 44rem;
+  bottom: 4rem;
   transform: translate(-50%);
   border-radius: 2rem;
   color: white;
